Updated style to prevent left padding on smaller screens

--- a/src/styles/_global-small.scss
+++ b/src/styles/_global-small.scss
@@ -17,9 +17,13 @@
 }
 
 @media screen and (max-width: 1024px) {
-    main,
+    .message,
+    .about,
+    .contact,
+    .home,
+    .spinner,
     footer,
-    .spinner {
+    main {
         margin: 0;
         width: 100%;
     }
